# pico-dm542

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dm524.c  dm524.dis  dm524.elf  dm524.elf.map  dm524.hex  dm524.uf2  dm542.c
elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
elf2uf2/boot_uf2_headers/: Makefile
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile
pico-sdk/src/common/boot_uf2/: Makefile
pico-sdk/src/common/pico_base/: Makefile
pico-sdk/src/common/pico_binary_info/: Makefile
pico-sdk/src/common/pico_bit_ops/: Makefile
pico-sdk/src/common/pico_divider/: Makefile
pico-sdk/src/common/pico_stdlib/: Makefile
pico-sdk/src/common/pico_sync/: Makefile
pico-sdk/src/common/pico_time/: Makefile
pico-sdk/src/common/pico_usb_reset_interface/: Makefile
pico-sdk/src/common/pico_util/: Makefile
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile
pico-sdk/src/rp2040/hardware_structs/: Makefile
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default.dis  bs2_default_padded_checksummed.S
pico-sdk/src/rp2_common/cmsis/: Makefile
pico-sdk/src/rp2_common/hardware_adc/: Makefile
pico-sdk/src/rp2_common/hardware_base/: Makefile
pico-sdk/src/rp2_common/hardware_claim/: Makefile
pico-sdk/src/rp2_common/hardware_dma/: Makefile
pico-sdk/tools/: Makefile
(+45 files in other folders)
